; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_get_audio_params.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/ffmpeg-mux/extr_ffmpeg-mux.c_get_audio_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audio_params = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [17 x i8] c"audio track name\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"audio bitrate\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"audio sample rate\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"audio channels\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.audio_params*, i32*, i8***)* @get_audio_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_audio_params(%struct.audio_params* %0, i32* %1, i8*** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.audio_params*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8***, align 8
  store %struct.audio_params* %0, %struct.audio_params** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8*** %2, i8**** %7, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = load i8***, i8**** %7, align 8
  %10 = load %struct.audio_params*, %struct.audio_params** %5, align 8
  %11 = getelementptr inbounds %struct.audio_params, %struct.audio_params* %10, i32 0, i32 3
  %12 = call i32 @get_opt_str(i32* %8, i8*** %9, i32* %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %40

15:                                               ; preds = %3
  %16 = load i32*, i32** %6, align 8
  %17 = load i8***, i8**** %7, align 8
  %18 = load %struct.audio_params*, %struct.audio_params** %5, align 8
  %19 = getelementptr inbounds %struct.audio_params, %struct.audio_params* %18, i32 0, i32 2
  %20 = call i32 @get_opt_int(i32* %16, i8*** %17, i32* %19, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %40

23:                                               ; preds = %15
  %24 = load i32*, i32** %6, align 8
  %25 = load i8***, i8**** %7, align 8
  %26 = load %struct.audio_params*, %struct.audio_params** %5, align 8
  %27 = getelementptr inbounds %struct.audio_params, %struct.audio_params* %26, i32 0, i32 1
  %28 = call i32 @get_opt_int(i32* %24, i8*** %25, i32* %27, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %23
  store i32 0, i32* %4, align 4
  br label %40

31:                                               ; preds = %23
  %32 = load i32*, i32** %6, align 8
  %33 = load i8***, i8**** %7, align 8
  %34 = load %struct.audio_params*, %struct.audio_params** %5, align 8
  %35 = getelementptr inbounds %struct.audio_params, %struct.audio_params* %34, i32 0, i32 0
  %36 = call i32 @get_opt_int(i32* %32, i8*** %33, i32* %35, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %31
  store i32 0, i32* %4, align 4
  br label %40

39:                                               ; preds = %31
  store i32 1, i32* %4, align 4
  br label %40

40:                                               ; preds = %39, %38, %30, %22, %14
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @get_opt_str(i32*, i8***, i32*, i8*) #1

declare dso_local i32 @get_opt_int(i32*, i8***, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
